# greet2org

./: .gitignore  LICENSE  Makefile  README.org  badges.txt  pyproject.toml  tox.ini
.github/workflows/: CICD_publish_wheel.yml  build_wheel.yml  build_wheel_build.yml  build_wheel_uv.yml  collect_badges.yml  run_pytest_pip.yml  run_pytest_uv.yml
src/app/: greeter.py
tests/: test_blackbox.py
