[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greet2org"
version = "0.1.2"
requires-python = ">=3.10"
authors = [
    { name = "Norwid Behrnd", email = "nbehrnd@yahoo.com" }
]
license = "MIT"
description = "Python wheel initially documented in Orgmode instead of Markdown"
readme = "README.md"

license-files = ["LICENSE"]
keywords = [
    "documentation",
    "orgmode",
    "packaging",
    "pandoc",
]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = []  # None, its works depends on Python's standard library alone

[project.optional-dependencies]  # collect by e.g. `pip install .[dev]`
dev = [
    "black>=25.9.0",
    "build>=1.3.0",
    "pytest>=8.4.2",
    "tox>=4.32.0",
]

[dependcy-groups]  # collect by `uv pip install .[dev]`
dev = [
    "black>=25.9.0",
    "build>=1.3.0",
    "pytest>=8.4.2",
    "tox>=4.32.0",
]

[project.urls]
Homepage = "https://github.com/nbehrnd/greet2org"
Documentation = "https://github.com/nbehrnd/greet2org"
Repository = "https://github.com/nbehrnd/greet2org"
Issues = "https://github.com/nbehrnd/greet2org/issues"

[project.scripts]
greet2org = "app.greeter:main"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
filterwarnings = "ignore::pytest.PytestCacheWarning"
markers = [
    "blackbox: a test from outside of the script's source code",
    "whitebox: a test by proper import of a function of the script",
]
